--- a/style.css
+++ b/style.css
@@ -76,6 +76,10 @@ main {
   align-items: center;
   transition: all 0.75s;
 }
+.player span{
+  display: none;
+  text-align: center;
+}
 
 /* ELEMENTS */
 .name {
@@ -194,12 +198,15 @@ main {
 }
 
 .player--winner {
-  background-color: #2f2f2f;
+  background-color: #3c1b88;
+}
+.player--winner span{
+  display: block;
 }
 
 .player--winner .name {
   font-weight: 700;
-  color: #c7365f;
+  color: #ffffff;
 }
 
 .hidden {
